updated RecipeController